Fix button spacing

--- a/src/components/socialicons/style.css
+++ b/src/components/socialicons/style.css
@@ -52,8 +52,47 @@
   background-color: var(--text-color);
 }
 
-@media ((max-width: 991px) or ((max-width: 1120px) and (min-width: 991px))) {
-  /* @media only screen and (max-width: 991px) { */
+@media only screen and (max-width: 1120px) and (min-width: 991px) {
+  .stick_follow_icon {
+    width: unset;
+    height: unset;
+    position: static;
+    margin-top: unset;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    padding: 30px 0;
+    align-items: center;
+  }
+  .stick_follow_icon p {
+    top: unset;
+    left: unset;
+    width: unset;
+    height: unset;
+    white-space: nowrap;
+    position: relative;
+    transform: unset;
+    font-size: 17px;
+    margin-right: 60px;
+  }
+
+  .stick_follow_icon p:after {
+    right: -50px;
+  }
+
+  .stick_follow_icon ul {
+    margin-bottom: 20px;
+  }
+  .stick_follow_icon ul li {
+    display: inline;
+    margin-bottom: 29px;
+    margin-right: 10px;
+
+    position: relative;
+  }
+}
+
+@media only screen and (max-width: 991px) {
   .stick_follow_icon {
     width: unset;
     height: unset;
