--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -122,6 +122,7 @@ section {
   transition: all 0.6s cubic-bezier(0.55, 0, 0.1, 1);
   border-radius: 0;
   margin-right: 20px;
+  margin-bottom: 20px;
 }
 
 .ac_btn a {
